switched hosting to gh pages, no longer need that silly empty php file to trick heroku. added better vertical alignment css.

--- a/stripes.css
+++ b/stripes.css
@@ -286,5 +286,6 @@ section.stripes-curtain{
 .calendar-player{
   position: relative;
   text-align: center;
-  top: 1em;
+  top: 50%;
+  transform: translateY(-50%);
 }
